syntax = "proto3";
option go_package = "github.com/lileio/image_service";
package image_service;

message Image {
  string version_name = 1;
  string filename = 2;
  string url = 3;
}

message ImageOperation {
  string version_name = 1;
  int32 height = 2;
  int32 width = 3;
  int32 quality = 4;
  int32 compression = 5;
  bool crop = 6;
  bool enlarge = 7;
  bool flip = 8;
  bool interlace = 9;
  Format format = 10;
}

enum Format {
  JPEG = 0;
  WEBP = 1;
  PNG = 2;
}

message ImageStoreRequest {
  string filename = 1;
  bytes data = 2;
  repeated ImageOperation ops = 3;
}

message ImageSyncResponse {
  repeated Image images = 1;
}

message DeleteRequest {
  string filename = 1;
}

message DeleteResponse {
  string filename = 1;
}

service ImageService {
  rpc Store(ImageStoreRequest) returns (stream Image) {}
  rpc StoreSync(ImageStoreRequest) returns (ImageSyncResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}
